--- a/assets/less/controlblueprint.less
+++ b/assets/less/controlblueprint.less
@@ -14,15 +14,17 @@
     }
 
     li.control:hover, li.inspector-open {
-        .builder-blueprint-control-text,
-        .builder-blueprint-control-textarea,
-        .builder-blueprint-control-dropdown {
-            border-color: @builder-hover-color;
-        }
+         > .control-wrapper {
+            .builder-blueprint-control-text,
+            .builder-blueprint-control-textarea,
+            .builder-blueprint-control-dropdown {
+                border-color: @builder-hover-color;
+            }
 
-        .builder-blueprint-control-dropdown:before {
-            background-color: @builder-hover-color;
-        }
+            .builder-blueprint-control-dropdown:before {
+                background-color: @builder-hover-color;
+            }
+         }
     }
 
     .builder-blueprint-control-textarea {
@@ -87,8 +89,10 @@
     }
 
     li.control:hover, li.inspector-open {
-        .builder-blueprint-control-checkbox:before {
-            border-color: @builder-hover-color;
+         > .control-wrapper {
+            .builder-blueprint-control-checkbox:before {
+                border-color: @builder-hover-color;
+            }
         }
     }
 
@@ -131,8 +135,10 @@
     }
 
     li.control:hover, li.inspector-open {
-        .builder-blueprint-control-switch:before {
-            background-color: @builder-hover-color;
+         > .control-wrapper {
+            .builder-blueprint-control-switch:before {
+                background-color: @builder-hover-color;
+            }
         }
     }
 }
