--- a/assets/less/buildingarea.less
+++ b/assets/less/buildingarea.less
@@ -134,7 +134,8 @@
                 }
             }
 
-            > .control-wrapper {
+            > .control-wrapper,
+            > .control-static-contents {
                 position: relative;
                 .transition(margin 0.1s);
             }
@@ -157,7 +158,8 @@
                 background-color: @builder-hover-color;
             }
 
-            > .control-wrapper {
+            > .control-wrapper,
+            > .control-static-contents {
                 margin-left: 20px;
                 margin-right: -20px;
             }
