--- a/formwidgets/formbuilder/partials/_controlwrapper.htm
+++ b/formwidgets/formbuilder/partials/_controlwrapper.htm
@@ -6,7 +6,7 @@
     <?= $this->renderControlBody($type, $properties) ?>
 </div>
 
-<?= $this->renderControlStaticBody($type, $properties) ?>
+<?= $this->renderControlStaticBody($type, $properties, $controlConfiguration) ?>
 
 <input type="hidden" value="<?= e(json_encode($fieldsConfiguration)) ?>" data-inspector-config>
 <input type="hidden" value="<?= e(json_encode($properties)) ?>" data-inspector-values>
