--- a/widgets/defaultcontroldesigntimeprovider/partials/_control-static-repeater.htm
+++ b/widgets/defaultcontroldesigntimeprovider/partials/_control-static-repeater.htm
@@ -1,9 +1,9 @@
-<div class="builder-form-container" data-contol-container data-container-name="form">
+<div class="builder-form-container builder-blueprint-control-repeater control-static-contents" data-contol-container data-container-name="form">
     <?php
         $controls = [];
 
-        if (isset($properties['form']['fields'])) {
-            $controls = $properties['form']['fields'];
+        if (isset($controlConfiguration['form']['fields'])) {
+            $controls = $controlConfiguration['form']['fields'];
         }
     ?>
 
