--- a/assets/less/controlpalette.less
+++ b/assets/less/controlpalette.less
@@ -19,6 +19,12 @@ ul.builder-control-palette {
         -khtml-user-drag: element;
         -webkit-user-drag: element;
         cursor: move;
+        display: inline-block;
+        font-size: 12px;
+
+        &:last-child {
+            margin-right: 10px;
+        }
 
         &:hover {
             background: #ecf0f1;
@@ -31,8 +37,5 @@ ul.builder-control-palette {
             color: #888888;
             top: 2px;
         }
-
-        display: inline-block;
-        font-size: 12px;
     }
 }
