--- a/assets/less/controlblueprint.less
+++ b/assets/less/controlblueprint.less
@@ -240,4 +240,18 @@
             }
         }
     }
+
+    .builder-blueprint-control-text {
+        &.fileupload.image {
+            width: 100px;
+            height: 100px;
+            text-align: center;
+
+            i {
+                line-height: 77px;
+                margin-right: 0;
+            }
+        }
+    }
+
 }
