--- a/formwidgets/formbuilder/partials/_controllist.htm
+++ b/formwidgets/formbuilder/partials/_controllist.htm
@@ -35,6 +35,6 @@
         data-builder-placeholder="true"
         data-builder-loading-text="<?= e(trans('rainlab.builder::lang.form.loading')) ?>"
     >
-        <i class="icon-plus-circle"></i><?= e(trans('rainlab.builder::lang.form.drop_control_here')) ?>
+        <i class="icon-plus-circle"></i><?= e(trans('rainlab.builder::lang.form.click_to_add_control')) ?>
     </li><li class="clear-row"></li>
 </ul>
