--- a/formwidgets/formbuilder/partials/_body.htm
+++ b/formwidgets/formbuilder/partials/_body.htm
@@ -1,12 +1,10 @@
-<!-- Start -->
-<div class="layout" data-inspector-container=".inspector-container">
-    <div class="layout-row">
-        <div class="layout-cell layout-relative">
-            <div class="layout">
-                <?= $this->makePartial('controlpalette') ?>
-                <?= $this->makePartial('buildingarea') ?>
-            </div>
+<div class="flex-layout-column fill-container">
+    <div class="flex-layout-row flex-layout-item stretch" data-inspector-container=".inspector-container">
+        <div class="flex-layout-item stretch-constrain layout-container relative">
+            <?= $this->makePartial('buildingarea') ?>
         </div>
-        <div class="layout-cell inspector-container builder-inspector-container" data-inspector-scrollable data-inspector-live-update></div>
+
+        <?php /* The next line should be a single line (:empty selector is used in CSS) */ ?>
+        <div class="flex-layout-item fix relative inspector-container builder-inspector-container" data-inspector-scrollable data-inspector-live-update></div>
     </div>
 </div>
