--- a/widgets/pluginlist/partials/_toolbar.htm
+++ b/widgets/pluginlist/partials/_toolbar.htm
@@ -1,4 +1,4 @@
-<div class="layout-row min-size panel-contents">
+<div class="flex-layout-item fix panel-contents">
     <div class="control-toolbar toolbar-padded">
         <div class="toolbar-item" data-calculate-width>
             <div class="toolbar" id="<?= $this->getId('toolbar-buttons') ?>">
