--- a/widgets/modellist/partials/_body.htm
+++ b/widgets/modellist/partials/_body.htm
@@ -1,3 +1,3 @@
-<div id="<?= $this->getId('body') ?>" class="layout">
+<div id="<?= $this->getId('body') ?>" class="flex-layout-item flex-layout-column">
     <?= $this->makePartial('widget-contents', ['pluginVector'=>$pluginVector, 'items'=>$items]) ?>
 </div>
