--- a/widgets/pluginlist/partials/_body.htm
+++ b/widgets/pluginlist/partials/_body.htm
@@ -1,5 +1,5 @@
 <?= $this->makePartial('toolbar') ?>
-<div class="layout-row">
+<div class="flex-layout-item">
     <div class="layout-cell">
         <div class="layout-relative">
             <?= $this->makePartial('plugin-list', ['items'=>$items]) ?>
