Experimental flexbox layout

--- a/behaviors/indexmodelformoperations/partials/_tab.htm
+++ b/behaviors/indexmodelformoperations/partials/_tab.htm
@@ -1,5 +1,5 @@
 <?= Form::open([
-    'class' => 'layout',
+    'class' => 'flex-layout-item fill-container flex-layout-column stretch',
     'data-change-monitor' => 'true',
     'data-window-close-confirm' => e(trans('backend::lang.form.confirm_tab_close')),
     'data-entity' => 'models',
