Finished permission management

--- a/behaviors/indexpermissionsoperations/partials/_toolbar.htm
+++ b/behaviors/indexpermissionsoperations/partials/_toolbar.htm
@@ -2,7 +2,7 @@
     <a
         href="javascript:;"
         class="btn btn-primary oc-icon-check save"
-        data-builder-command="modelList:cmdSaveList"
+        data-builder-command="permission:cmdSavePermissions"
         data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
         data-hotkey="ctrl+s, cmd+s">
         <?= e(trans('backend::lang.form.save')) ?>
