--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -7,6 +7,7 @@
 @import "buildingarea.less";
 @import "controlblueprint.less";
 @import "tabs.less";
+@import "menus.less";
 
 .control-filelist ul li.group.model > h4 a:after {
     content: @random;
